tests/contract_testcases/evm/bad_pragmas.sol
pragma solidity 1.2.3.4;

// ---- Expect: diagnostics ----
// error: 1:17-24: no more than three numbers allowed - major.minor.patch
